# chaotic-systems-dynamics

./: .gitattributes  .gitignore  CLAUDE.md  CONTEXT.md  README.md  SECURITY.md  UI_CRITIQUE.md  pyproject.toml
.claude/: .registry-manifest.json  model-policy.yaml  settings.json
.claude/agents/: README.md  capability-research-scout.md  capability-scout-academic.md  capability-scout-challenger.md  capability-scout-competitive.md  capability-scout-internal-adversary.md  capability-scout-oss.md  draft-proposal-critic.md  draft-proposal-drafter.md  draft-proposal-refiner.md  draft-proposal-sequencer.md  frontend-uplift-art-direction-scout.md  frontend-uplift-challenger.md  frontend-uplift-current-state-critic.md  frontend-uplift-experiential-scout.md  frontend-uplift-inspiration-scout.md  frontend-uplift-inspiration.md  frontend-uplift-library-scout.md  frontend-uplift-library.md  frontend-uplift-visual-scout.md  frontend-uplift-visual.md  milestone-adversary-critic.md  milestone-frontend-ux.md  milestone-implementer.md  milestone-oss-scout.md  milestone-rectifier.md  milestone-researcher.md  pipeline-prioritizer.md  pipeline-synthesizer.md  roadmap-decomposer.md  roadmap-materializer.md  roadmap-refiner.md  roadmap-sequencer.md  ui-upgrade-scout.md
.claude/commands/: capability-scout.md  draft-proposal.md  frontend-uplift.md  milestone-pipeline.md  roadmap.md
.claude/references/: frontend-design-language.md  frontend-uplift-experiential-motion.md  frontend-uplift-motion-vocabulary.md  frontend-uplift-source-registry.md  github-conventions.md  handoff-contract.md  milestone-pipeline-agent-contract.md  milestone-pipeline-commit-format.md  milestone-pipeline-critique-format.md  milestone-pipeline-findings-schema.md  milestone-pipeline-phase-critique.md  milestone-pipeline-phase-implement.md  milestone-pipeline-phase-rectify.md  milestone-pipeline-phase-research.md  milestone-pipeline-state-schema.md  pipeline-outcome-log-schema.md  pipeline-pattern-v2.md  roadmap-anti-patterns.md  roadmap-example.yaml  roadmap-frameworks.md  roadmap-phase-decompose.md  roadmap-phase-materialize.md  roadmap-phase-refine.md  roadmap-phase-sequence.md  runtime-contract.md
.claude/scripts/: PORTABILITY.md  _pipeline_common.py  frontend-design-check.py  frontend-uplift-canon-lint.py  frontend-uplift-mjs-lint.sh  frontend-uplift-workflow.mjs  milestone-pipeline-check-deps.py  milestone-pipeline-checkpoint.py  milestone-pipeline-consolidate-memory-test.sh  milestone-pipeline-consolidate-memory.sh  milestone-pipeline-dedupe-findings.py  milestone-pipeline-findings.py  milestone-pipeline-init-state.sh  milestone-pipeline-issue-note.py  milestone-pipeline-record-progress.py  milestone-pipeline-resolve-brief.py  milestone-pipeline-status.sh  pipeline-outcome-log-test.py  pipeline-outcome-log.py  pipeline-reconcile.py  repos-manifest.txt  roadmap-init.py  roadmap-migrate.py  roadmap-project-fields.py  roadmap-schema.json  roadmap-score-moscow.py  roadmap-score-rice.py  roadmap-to-github.py  roadmap-validate.py  sync-agents-to-providers.py  sync-model-policy.py  sync-repos.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  epic.yml  finding.yml  spike.yml  task.yml
docs/: animation_smoothness_iter4.md  numerics.md  prerender_design.md  renderer_perf.md  systems.md  ui_design.md  visualization.md
docs/proposals/: README.md  capability-roadmap-2026-05-17.md  chaos-indicator-suite-gui-2026-05-20.md  clifford-animation-loop-2026-06-02.md  conradi-attractor-panel-2026-05-31.md  conradi-map-picker-2026-06-02.md  python-only-pipeline-tooling-2026-05-31.md
examples/: README.md  double_pendulum_energy.py  lorenz_gui.py  lorenz_video.py  lyapunov_lorenz.py  poincare_henon.py
src/chaotic_systems/: __init__.py
tests/core/: test_base.py  test_basins.py  test_bifurcation.py  test_chaos_hurst.py  test_chaos_permutation_entropy.py  test_chaos_weighted_birkhoff.py  test_chaos_zero_one_test.py  test_discrete.py  test_educational_notes.py  test_hamiltonian.py  test_kaplan_yorke.py  test_lagrangian.py  test_lyapunov.py  test_numba.py  test_post_sim_diagnostics_protocol.py  test_recurrence.py
tests/gui/: conftest.py  test_analyse_submenu.py  test_basin_panel.py  test_bifurcation_panel.py  test_chaos_indicators.py  test_collapsible_section_qss.py  test_command_palette.py  test_compare_setting.py  test_conradi_panel.py  test_conservation_panel.py  test_dialog_cleanup.py  test_dock_widgets.py  test_export_actions.py  test_export_estimate.py  test_icons.py  test_integrator_gating.py  test_latex_reflow_on_show.py  test_latex_wrap.py  test_layout.py  test_live_preview.py  test_lyapunov_panel.py  test_main_window.py  test_notes_panel.py  test_notes_theme.py  test_orphan_labels.py  test_panel_helpers.py  test_param_readout.py  test_param_strip.py  test_phase_panel.py  test_poincare_panel.py  test_post_sim_diagnostics_panel.py  test_preferences.py  test_prerender.py  test_recurrence_panel.py  test_scrub_spinbox.py  test_scrubber_tooltip.py  test_settings.py  test_system_picker.py  test_theme.py  test_transport.py  (+2 more)
tests/integrators/: test_adaptive.py  test_dde.py  test_fixed_step.py  test_jax_backend.py  test_jax_polynomial_rhs.py  test_numbalsoda_backend.py  test_sundials_backend.py  test_symplectic.py
tests/io/: test_run_history.py  test_trajectory.py
tests/systems/: test_clifford.py  test_conradi.py  test_double_pendulum.py  test_duffing.py  test_henon_heiles.py  test_henon_map.py  test_ikeda.py  test_kuramoto.py  test_logistic.py  test_lorenz.py  test_mackey_glass.py  test_registry.py  test_rossler_hyper.py  test_standard_map.py
tests/tooling/: test_checkpoint_init.py  test_ensure_gui_bootable.py  test_pipeline_common.py  test_status.py
tests/visualization/: test_animation.py  test_attractor_density.py  test_attractor_screen.py  test_basin_plot.py  test_bifurcation_plot.py  test_colormaps.py  test_conservation_plot.py  test_contract.py  test_latex.py  test_loop_export.py  test_overlay.py  test_param_path.py  (+6 more)
tools/: capture_polyline_screenshots.py  validate_smoothness.py
(+115 files in other folders)
