[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chaotic-systems-dynamics"
version = "0.1.0"
description = "Simulation and visualization of chaotic dynamical systems with a native desktop GUI."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Chris Dare", email = "me@chrisdare.net" },
]
keywords = [
    "chaos",
    "dynamical-systems",
    "lorenz",
    "double-pendulum",
    "lyapunov",
    "hamiltonian",
    "lagrangian",
    "ode",
    "simulation",
    "visualization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]

# Runtime dependencies — merged from the math (core/integrators/systems)
# stack and the visualization/GUI stack. Keep additions to both halves of
# this list rather than overwriting either.
#
# Math stack:
#   - numpy, scipy: numerical work
#   - sympy: symbolic Lagrangians / Hamiltonians and LaTeX prettification
#
# Visualization + GUI stack:
#   - PySide6 / Qt: native desktop window
#   - PyVista + pyvistaqt: embedded 3D viewport (VTK underneath)
#   - matplotlib: LaTeX (mathtext) rendering and 2D phase-space panels
#   - imageio + imageio-ffmpeg: offline video export
#
# Numba is an *optional* JIT for users who want to compile their own
# RHS; the integrators ship with a pure-NumPy fallback. See the
# ``performance`` extra below.
dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "sympy>=1.13",
    "matplotlib>=3.9",
    "PySide6>=6.7",
    "pyvista>=0.44",
    "pyvistaqt>=0.11",
    "imageio>=2.34",
    "imageio-ffmpeg>=0.5",
]

[project.scripts]
chaotic-systems-gui = "chaotic_systems.gui.__main__:main"

[project.optional-dependencies]
# Test-only extras.
test = [
    "pytest>=8.0",
    "pytest-benchmark>=5.0",
    "pytest-qt>=4.4",
    "hypothesis>=6.100",
]
# Development tooling extends `test` with linters / type-checkers.
dev = [
    "chaotic-systems-dynamics[test]",
    "ruff>=0.5",
    "mypy>=1.10",
]
# Optional numba JIT for users who want to compile their own RHS.
performance = [
    "numba>=0.60",
]

[project.urls]
Homepage = "https://github.com/chris-dare-dev/chaotic-systems-dynamics"
Repository = "https://github.com/chris-dare-dev/chaotic-systems-dynamics"
Issues = "https://github.com/chris-dare-dev/chaotic-systems-dynamics/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/chaotic_systems"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "examples/",
    "docs/",
    "README.md",
    "CONTEXT.md",
    "SECURITY.md",
    "CLAUDE.md",
    "LICENSE",
    "pyproject.toml",
]

# ---------------------------------------------------------------------------
# Tool configuration.
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# Conservative starting set. `E` + `W` (pycodestyle), `F` (pyflakes), `I`
# (isort), `B` (bugbear), `UP` (pyupgrade for 3.12+). We deliberately do
# not enable `D` (pydocstyle) yet — the codebase has good docstrings but
# they don't all match a single style.
select = ["E", "F", "I", "W", "B", "UP"]
ignore = [
    "E501",  # line length — let the formatter handle long lines
    "B008",  # function call in default arg — common with np.array defaults
]

[tool.ruff.lint.per-file-ignores]
# Tests use `assert` extensively and aren't shipped to end-users.
"tests/*" = ["B011", "B018"]

[tool.mypy]
python_version = "3.12"
# Pragmatic: the visualization + GUI layers do a lot of duck-typing
# against PyVista / PySide6 (which have weak stubs). `strict = true` would
# require either widespread `# type: ignore`s or wholesale `Any` typing.
# We keep mypy lenient and rely on the test suite as the safety net.
strict = false
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
