[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chaotic-systems-dynamics"
version = "0.1.0"
description = "Simulation and visualization of chaotic dynamical systems with a native desktop GUI."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Chris Dare", email = "me@chrisdare.net" },
]
keywords = [
    "chaos",
    "dynamical-systems",
    "lorenz",
    "double-pendulum",
    "lyapunov",
    "hamiltonian",
    "lagrangian",
    "ode",
    "simulation",
    "visualization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]

# Runtime dependencies — merged from the math (core/integrators/systems)
# stack and the visualization/GUI stack. Keep additions to both halves of
# this list rather than overwriting either.
#
# Math stack:
#   - numpy, scipy: numerical work
#   - sympy: symbolic Lagrangians / Hamiltonians and LaTeX prettification
#
# Visualization + GUI stack:
#   - PySide6 / Qt: native desktop window
#   - PyVista + pyvistaqt: embedded 3D viewport (VTK underneath)
#   - matplotlib: LaTeX (mathtext) rendering and 2D phase-space panels
#   - imageio + imageio-ffmpeg: offline video export
#
# Numba is an *optional* JIT for users who want to compile their own
# RHS; the integrators ship with a pure-NumPy fallback. See the
# ``performance`` extra below.
dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "sympy>=1.13",
    "matplotlib>=3.9",
    "PySide6>=6.7",
    "pyvista>=0.44",
    "pyvistaqt>=0.11",
    "imageio>=2.34",
    "imageio-ffmpeg>=0.5",
    # FU-005 — qtawesome (Material Design Icons 6 + FontAwesome 6 +
    # Codicons) replaces the hand-rolled SVG icon set under
    # ``assets/icons/`` and the URL-rewriting hack that previously
    # had to absolutise the relative QSS ``url(...)`` paths against
    # the installed package. Pure-Python, MIT-licensed, ~12 MB
    # wheel (bundles three icon fonts; no compiled extensions).
    "qtawesome>=1.4",
    # FU-006 — superqt (napari ecosystem; pyapp-kit). The initial
    # rollout consumes ``QSearchableComboBox`` to filter the
    # 13+ system picker; future passes can adopt other superqt
    # primitives (``QCollapsible``, ``QEnumComboBox``, ``QFlowLayout``)
    # as needed. ``QLabeledDoubleSlider`` is intentionally NOT
    # adopted for the parameter form yet: superqt 0.8 doesn't
    # support logarithmic scale and the project's Kuramoto K
    # parameter (range 0.01-50) depends on log-scale fidelity.
    # BSD-3-Clause, 0.8 MB wheel, deps on ``qtpy`` only.
    "superqt>=0.8",
]

[project.scripts]
chaotic-systems-gui = "chaotic_systems.gui.__main__:main"

[project.optional-dependencies]
# Test-only extras.
test = [
    "pytest>=8.0",
    "pytest-benchmark>=5.0",
    "pytest-qt>=4.4",
    "hypothesis>=6.100",
]
# Development tooling extends `test` with linters / type-checkers.
dev = [
    "chaotic-systems-dynamics[test]",
    "ruff>=0.5",
    "mypy>=1.10",
]
# Optional numba JIT for users who want to compile their own RHS.
#
# Includes ``numbalsoda`` (I2) — a numba-callable LSODA wrapper that
# closes the "you can JIT your RHS but the outer loop is still
# Python" gap that ``docs/numerics.md`` calls out. Note: numbalsoda
# is maintenance-dormant (last release 2022) but still correct
# because the underlying ODEPACK LSODA is itself frozen-spec; prefer
# I1's JAX/diffrax path for new optional-backend work.
performance = [
    "numba>=0.60",
    "numbalsoda>=0.3",
]
# I1 — Optional JAX / diffrax backend for vmapped trajectory batches.
# Pulls in JAX + diffrax to unlock the ``JAX-RK45`` / ``JAX-Tsit5``
# integrators registered in ``chaotic_systems.integrators`` and the
# ``vmap_trajectories`` helper. Required for the basin-of-attraction
# diagnostic (D4) and any large parameter sweep that would otherwise
# pay one scipy invocation per IC.
#
# Versions: jax 0.4.30 (Jun 2024) is the earliest with the modern
# stable API diffrax 0.6+ depends on. CPU-only by default — users who
# want GPU/TPU JAX should install jax with the appropriate extra
# *before* installing this package so JAX picks up CUDA / Metal / etc.
jax = [
    "jax>=0.4.30",
    "diffrax>=0.6",
]
# I3 — Optional NREL scikit-sundae (SUNDIALS) backend for
# production-grade BDF / Adams multistep + IDA DAE integration.
# scikit-sundae 1.1 (Oct 2024) and 1.1.3+ ship wheels with SUNDIALS
# 7.5 prebuilt, so the project's "no Julia / Rust / C++ deps the
# user would need to compile" constraint is satisfied — installing
# this extra never triggers a local C compile.
sundials = [
    "scikit-sundae>=1.1",
]

[project.urls]
Homepage = "https://github.com/chris-dare-dev/chaotic-systems-dynamics"
Repository = "https://github.com/chris-dare-dev/chaotic-systems-dynamics"
Issues = "https://github.com/chris-dare-dev/chaotic-systems-dynamics/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/chaotic_systems"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "examples/",
    "docs/",
    "README.md",
    "CONTEXT.md",
    "SECURITY.md",
    "CLAUDE.md",
    "LICENSE",
    "pyproject.toml",
]

# ---------------------------------------------------------------------------
# Tool configuration.
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# Conservative starting set. `E` + `W` (pycodestyle), `F` (pyflakes), `I`
# (isort), `B` (bugbear), `UP` (pyupgrade for 3.12+). We deliberately do
# not enable `D` (pydocstyle) yet — the codebase has good docstrings but
# they don't all match a single style.
select = ["E", "F", "I", "W", "B", "UP"]
ignore = [
    "E501",  # line length — let the formatter handle long lines
    "B008",  # function call in default arg — common with np.array defaults
]

[tool.ruff.lint.per-file-ignores]
# Tests use `assert` extensively and aren't shipped to end-users.
"tests/*" = ["B011", "B018"]

[tool.mypy]
python_version = "3.12"
# Pragmatic: the visualization + GUI layers do a lot of duck-typing
# against PyVista / PySide6 (which have weak stubs). `strict = true` would
# require either widespread `# type: ignore`s or wholesale `Any` typing.
# We keep mypy lenient and rely on the test suite as the safety net.
strict = false
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
